--- a/index.html
+++ b/index.html
@@ -10,8 +10,49 @@
 
     <header>Header</header>
     <nav>Nav</nav>
-    <main>Main</main>
-    <article>Article</article>
+    <div class="content">
+        <main>
+            <h1>Main content</h1>
+            <section class="galleryContainer">
+                <div class="responsive">
+                    <div class="card">
+                        <figure>
+                            <img src="https://www.google.it/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo" height="300" width="200" alt="google logo">
+                            <figcaption>Description</figcaption> 
+                        </figure>
+                    </div>
+                </div>
+                <div class="responsive">
+                    <div class="card">
+                        <figure>
+                            <img src="https://www.google.it/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo" height="300" width="200" alt="google logo">
+                            <figcaption>Description</figcaption> 
+                        </figure>
+                    </div>
+                </div>
+                <div class="responsive">
+                    <div class="card">
+                        <figure>
+                            <img src="https://www.google.it/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo" height="300" width="200" alt="google logo">
+                            <figcaption>Description</figcaption> 
+                        </figure>
+                    </div>
+                </div>
+                <div class="responsive">
+                    <div class="card">
+                        <figure>
+                            <img src="https://www.google.it/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo" height="300" width="200" alt="google logo">
+                            <figcaption>Description</figcaption> 
+                        </figure>
+                    </div>
+                </div>
+                <div style="clear:both;"></div>
+            </section>
+            
+        </main>
+        <article>Article</article>
+    </div>
+    
     <footer>Footer</footer>
 
 
